--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         
         <section id="gallery">
             <h2>Gallery</h2>
-            <img src="https://example.com/highland-cow1.jpg" alt="Highland Cow 1">
-            <img src="https://example.com/highland-cow2.jpg" alt="Highland Cow 2">
-            <img src="https://example.com/highland-cow3.jpg" alt="Highland Cow 3">
+            <img src="cow1.jfif">
+            <img src="cow2.jfif">
+            <img src="cow3.jfif">
             <p>More beautiful Highland cows!</p>
         </section>
     </main>
