--- a/gallery.html
+++ b/gallery.html
@@ -19,9 +19,9 @@
     
     <main>
         <h2>Gallery</h2>
-        <img src="https://images.unsplash.com/photo-1584917373925-7d4e0edc4f67" alt="Highland Cow 1">
-        <img src="https://images.unsplash.com/photo-1595861208925-f248e3538021" alt="Highland Cow 2">
-        <img src="https://images.unsplash.com/photo-1612898876885-afe7d7bbec36" alt="Highland Cow 3">
+        <img src="cow1.jfif">
+        <img src="cow2.jfif">
+        <img src="cow3.jfif">
         <p>More beautiful Highland cows!</p>
     </main>
 
